only footer left

--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
               </button>
             </div>
           </div>
+        </div>
       </section>
 
       <section class="section-children" id="zalo-wallpaper">
@@ -285,6 +286,7 @@
               </button>
             </div>
           </div>
+        </div>
       </section>
 
       <section class="section-children" id="avatar">
@@ -319,6 +321,7 @@
               </button>
             </div>
           </div>
+        </div>
       </section>
 
       <section class="section-children" id="group-img">
@@ -352,6 +355,7 @@
               </button>
             </div>
           </div>
+        </div>
       </section>
 
       <section class="section-children" id="phone-wallpaper">
@@ -480,12 +484,136 @@
               </button>
             </div>
           </div>
+        </div>
+      </section>
+    </section>
+
+    <section class="section-parent" id="typography">
+      <div class="parent-title plus-jakarta-sans">
+        Typography
+      </div>
+      <section class="section-children" id="header">
+        <div class="section-left">
+          <div class="children-title plus-jakarta-sans">
+            Font chữ tiêu đề
+          </div>
+          <div class="children-description">
+            Bộ font chữ Plus Jakarta Sans có những nét tương đồng với logo thương hiệu, ngoài ra còn có những đặc điểm
+            riêng đó là những đường cong mềm mại ở mặt chữ, phù hợp kết hợp với yếu tố đồ hoạ nhằm tạo nên tính nhất
+            quán cho thương hiệu
+          </div>
+        </div>
+        <div class="section-right">
+          <section class="section-title">
+            <div>Plus Jakarta Sans</div>
+            <button class="plus-jakarta-sans btn-download">
+              <img src="./assets/icons/download.svg" alt="download">
+              <span>
+                JPG
+              </span>
+            </button>
+          </section>
+          <section class="section-regular">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Plus Jakarta Sans Regular</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+          <section class="section-medium">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Plus Jakarta Sans Medium</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+          <section class="section-bold">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Plus Jakarta Sans Bold</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+        </div>
+      </section>
+
+      <section class="section-children" id="text">
+        <div class="section-left">
+          <div class="children-title plus-jakarta-sans">
+            Font chữ nội dung
+          </div>
+          <div class="children-description">
+            Font chữ hiện đại và dễ đọc trên màn hình điện tử cũng như trên các ấn phẩm truyền thông. Font chữ được
+            thiết kế hiện đại, linh hoạt, sẽ phù hợp cho cả tiếng Anh, tiếng Việt.
+          </div>
+        </div>
+        <div class="section-right">
+          <section class="section-title">
+            <div>Lexlend Deca</div>
+            <button class="plus-jakarta-sans btn-download">
+              <img src="./assets/icons/download.svg" alt="download">
+              <span>
+                JPG
+              </span>
+            </button>
+          </section>
+          <section class="section-regular">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Lexlend Deca Light</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+          <section class="section-medium">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Lexlend Deca Medium</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+          <section class="section-bold">
+            <div class="left">Aa</div>
+            <div class="right">
+              <div class="right-title">Lexlend Deca Bold</div>
+              <div class="right-text">
+                ABCDEFGHIJKLMN OPQRSTUVWXYZ abcdefghijklmnop 0123456789.(?&$)!
+              </div>
+            </div>
+          </section>
+        </div>
       </section>
     </section>
   </div>
 
   <footer>
+    <div class="footer-container">
+      <div class="footer-title">
+        <p>Ứng dụng GOCheap!</p>
+        <p>MIỄN PHÍ</p>
+      </div>
+      <div class="footer-action">
+        <div>
+          <img src="./assets/images/qr.png" alt="">
+        </div>
+        <div>
+          <img src="./assets/images/android.png" alt="">
+          <img src="./assets/images/ios.png" alt="">
+        </div>
+      </div>
+      <div class="footer-contact">
 
+      </div>
+    </div>
   </footer>
   <div class="service-book">
     <div class="service-card">
